--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "mongodb": "^3.1.4",
     "phantomjs": "^2.1.7",
     "superagent": "^3.8.3",
     "url": "^0.11.0",
